feat: Criado modelo Document
Este commit adiciona o modelo Document para a salvar os dados dos arquivos.

Campos:
- path
- size
- uploadDate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sentry
+spring.datasource.username=user
+spring.datasource.password=my-secret-pw
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
