--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,20 @@
 services:
   app:
+    container_name: spring_app
     restart: always
     build:
       context: .
       dockerfile: docker/Dockerfile
     ports:
       - "8080:8080"
-      - "35729:35729" # LiveReload
-      - "5005:5005"   # Debug Remoto
     volumes:
       - .:/app
       - ~/.m2:/root/.m2
+    environment:
+      - SPRING_PROFILES_ACTIVE=local
     depends_on:
       - db
+
   db:
     image: postgres
     container_name: sentry_psql
